--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ google-auth==2.37.0
 google-genai==0.3.0
 idna==3.10
 lxml==5.3.0
+mysql-connector-python==9.2.0
 pillow==11.1.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
